--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <h3>Password Generator</h3>
         <a href="https://pcyang57.github.io/Password-Generator/">
           <img
-            src="images/03-javascript-homework-demo.png"
+            src="images/pass.png"
             id="smallProj1"
             alt="Password Generator"
         /></a>
@@ -88,7 +88,7 @@
         <h3>U.S. National Park Weather App</h3>
         <a href="https://cumar-khalif.github.io/U.S.-National-Parks/">
           <img
-            src="images/homePage.png"
+            src="images/park.png"
             id="smallProj2"
             alt="homepage for national park search with mountainous background and a search by state dropbox"
         /></a>
@@ -98,7 +98,7 @@
         <h3>Budget Tracker</h3>
         <a href="pcbudgettracker.herokuapp.com/">
           <img
-            src="images/pexels-volkan-vardar-3887985.png"
+            src="images/budget.png"
             id="smallProj3"
             alt="budget"
         /></a>
